# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  README.md  SnakeGame  highscore.txt
cmake/: FindSDL2_ttf.cmake
src/: controller.cpp  controller.h  game.cpp  game.h  renderer.cpp  renderer.h  snake.cpp  snake.h
